Fix mobile report chart legends
